--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to the Webinar</h1>
-    <h2>Successfully Migrate to the Cloud with Chef and AWS</h2>
-    <p>Presenter for today: <strong>Kurt Jung</strong></p>
+    <h1>Welcome to CfgMgmtCamp</h1>
+    <h2>Today we will demonstrate the strength of Progress Chef Courier</h2>
   </div>
 </body>
 </html>
