--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
   <div class="container">
     <h1>Welcome to CfgMgmtCamp</h1>
-    <h2>Today we will demonstrate the strength of Progress Chef Courier</h2>
+    <h2>Lets demonstrate the strength of Progress Chef Courier</h2>
   </div>
 </body>
 </html>
