--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       font-family: Arial, sans-serif;
       color: #333333;
-      background: #d6eaff; /* Light blue background */
+      background: #d6eaff; 
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -22,7 +22,7 @@
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      background: #ffffff; /* White box background */
+      background: #ffffff; 
     }
     h1 {
       font-size: 3rem;
@@ -47,7 +47,7 @@
 <body>
   <div class="container">
     <h1>Welcome to CfgMgmtCamp</h1>
-    <h2>Lets demonstrate the strength of Progress Chef Courier</h2>
+    <h2>Allow us to demonstrate the strength of Progress Chef Courier</h2>
   </div>
 </body>
 </html>
