--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to CfgMgmtCamp</h1>
-    <h2>Allow us to demonstrate the strength of Progress Chef Courier</h2>
+    <h1>Progress Chef Courier</h1>
+    <h2>Chef Courier empowers admins to craft tailored node lists, orchestrating jobs systematically through runs, schedules, and conditions. 
+        This grants granular IT infrastructure control and reduces the time it takes to detect and resolve issues.</h2>
   </div>
 </body>
 </html>
