--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 <body>
   <div class="container">
     <h1>Progress Chef Courier</h1>
-    <h2>Chef Courier empowers admins to craft tailored node lists, orchestrating jobs systematically through runs, schedules, and conditions. 
-        This grants granular IT infrastructure control and reduces the time it takes to detect and resolve issues.</h2>
+    <h2>WHATEVER, WHEREVER, WHENEVER</h2>
   </div>
 </body>
 </html>
