--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webinar Welcome Page</title>
+  <title>Welcome Page</title>
   <style>
     body {
       margin: 0;
@@ -49,5 +49,17 @@
     <h1>Progress Chef Courier</h1>
     <h2>WHATEVER, WHEREVER, WHENEVER</h2>
   </div>
+      <script>
+        // Hardcoded machine messages
+        var hostname = window.location.hostname; // Get the machine's hostname/IP
+        
+        if (hostname === "172.31.1.65") {
+            document.getElementById("machine-message").innerText = "Welcome to machine 1";
+        } else if (hostname === "172.31.14.194") {
+            document.getElementById("machine-message").innerText = "Welcome to machine 2";
+        } else {
+            document.getElementById("machine-message").innerText = "Unknown machine";
+        }
+    </script>
 </body>
 </html>
