--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
   <script>
     // Fetch the machine message from the local file
-    fetch('/machine_info.txt')
+    fetch('/var/www/html/machine_info.txt')
       .then(response => response.text())
       .then(message => {
         document.getElementById("machine-message").innerText = message.trim();
