--- a/index.html
+++ b/index.html
@@ -48,17 +48,7 @@
   <div class="container">
     <h1>Progress Chef Courier</h1>
     <h2>WHATEVER, WHEREVER, WHENEVER</h2>
-    <p id="machine-message">Loading...</p>
+    <p id="machine-message">{{MACHINE_MESSAGE}}</p>
   </div>
-    <script>
-    fetch('/machine_info.txt')  // Fetch the content of machine_info.txt
-      .then(response => response.text())
-      .then(message => {
-        document.getElementById("machine-message").innerText = message.trim(); // Set the content inside the <p> tag
-      })
-      .catch(error => {
-        document.getElementById("machine-message").innerText = "Error fetching machine info";
-      });
-  </script>
 </body>
 </html>
