--- a/index.html
+++ b/index.html
@@ -50,22 +50,31 @@
     <h2>WHATEVER, WHEREVER, WHENEVER</h2>
     <p id="machine-message">{{MACHINE_MESSAGE}}</p>
   </div>
-    <script>
-    fetch('/file-list')
-      .then(response => response.json())
-      .then(files => {
-        const fileList = document.getElementById("file-list");
-        fileList.innerHTML = "";
-        files.forEach(file => {
-          let li = document.createElement("li");
+<script>
+  fetch('/file-list')
+    .then(response => response.text())
+    .then(data => {
+      const fileList = data.split("\n").filter(file => file.trim() !== "");
+      const fileContainer = document.createElement("div");
+      fileContainer.innerHTML = "<h2>Files in /home/polyfil</h2>";
+
+      if (fileList.length === 0) {
+        fileContainer.innerHTML += "<p>No files found.</p>";
+      } else {
+        const ul = document.createElement("ul");
+        fileList.forEach(file => {
+          const li = document.createElement("li");
           li.textContent = file;
-          fileList.appendChild(li);
+          ul.appendChild(li);
         });
-      })
-      .catch(error => {
-        console.error('Error fetching file list:', error);
-        document.getElementById("file-list").innerText = "Error loading files";
-      });
-  </script>
+        fileContainer.appendChild(ul);
+      }
+
+      document.body.appendChild(fileContainer);
+    })
+    .catch(error => {
+      console.error('Error fetching file list:', error);
+    });
+</script>
 </body>
 </html>
