--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      position: relative;
+    }
+    .version {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      font-size: 1rem;
+      font-weight: bold;
+      color: #000;
     }
     .container {
       text-align: center;
@@ -45,6 +54,7 @@
   </style>
 </head>
 <body>
+  <div class="version">Installed Nginx Version: nginx/1.26.3</div>
   <div class="container">
     <h1>Progress Chef Courier</h1>
     <h2>WHATEVER, WHEREVER, WHENEVER</h2>
